Add Windows support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,15 @@ name = "memalloc"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+[target.'cfg(unix)'.dependencies]
 libc = "0.2.137"
+
+[target.'cfg(windows)'.dependencies.windows]
+version = "0.43.0"
+default-features = false
+features = [
+    "Win32_System_Memory",
+    "Win32_Foundation",
+    "Win32_System_SystemInformation",
+    "Win32_System_Diagnostics_Debug",
+]
